--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<iframe 
+src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_merakum/playlist.m3u8" 
+width="100%" 
+height="100%" 
+allowtransparency="true" 
+frameborder="0" 
+/>
 
