--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title> Sivas Belediyesi Meraküm Canlı Yayın | github.com/heyturkiye58/merakum </title>
 <iframe 
 src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_merakum/playlist.m3u8" 
 width="100%" 
@@ -5,4 +6,3 @@ height="100%"
 allowtransparency="true" 
 frameborder="0" 
 />
-
