--- a/sehiricikameralar/aksu/index.html
+++ b/sehiricikameralar/aksu/index.html
@@ -1,4 +1,4 @@
-<title> Sivas Belediyesi Meydan Canlı Yayın | github.com/heyturkiye58/merakum </title>
+<title> Sivas Belediyesi Aksu Canlı Yayın | github.com/heyturkiye58/merakum </title>
 <link rel="shortcut icon" href="https://merakum.ga/logo/yenilogo.png" type="image/x-icon" >
 <iframe 
 src="http://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_aksu/playlist.m3u8" 
