--- a/sehiricikameralar/index.html
+++ b/sehiricikameralar/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="1; URL=http://merakum.ga/">
+<meta http-equiv="Refresh" content="1; URL=https://merakum.github.io/">
 <meta http-equiv="pragma" content="no-cache">
 </head>
 <body>Şehir İçi Kameralar bölümü hakkında sitenin mevcut sahibi bir açıklama yapmadığı için Meraküm kamerasına yönlendiriliyorsunuz, lütfen bekleyin.
