--- a/sehiricikameralar/medrese/index.html
+++ b/sehiricikameralar/medrese/index.html
@@ -1,5 +1,5 @@
-<title> Sivas Belediyesi Medrese Canlı Yayın | github.com/heyturkiye58/merakum </title>
-<link rel="shortcut icon" href="https://merakum.ga/logo/yenilogo.png" type="image/x-icon" >
+<title> Sivas Belediyesi Medrese Canlı Yayın | github.com/merakum/merakum.github.io </title>
+<link rel="shortcut icon" href="https://merakum.github.io/logo/yenilogo.png" type="image/x-icon" >
 <iframe 
 src="http://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_medrese/playlist.m3u8" 
 width="100%" 
