--- a/mdrse/index.html
+++ b/mdrse/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="1; URL=http://merakum.ga/sehiricikameralar/medrese">
+<meta http-equiv="Refresh" content="1; URL=https://merakum.github.io/sehiricikameralar/medrese">
 </head>
 </html>
