--- a/m/index.html
+++ b/m/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="1; URL=http://merakum.ga/sehiricikameralar/meydan">
+<meta http-equiv="Refresh" content="1; URL=https://merakum.github.io/sehiricikameralar/meydan">
 </head>
 </html>
