--- a/aksu/index.html
+++ b/aksu/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="1; URL=https://merakum.ga/sehiricikameralar/aksu">
+<meta http-equiv="Refresh" content="1; URL=https://merakum.github.io/sehiricikameralar/aksu">
 </head>
 </html>
