--- a/sehiricikameralar/aksu/index.html
+++ b/sehiricikameralar/aksu/index.html
@@ -1,7 +1,7 @@
 <title> Sivas Belediyesi Aksu Canlı Yayın | github.com/merakum/merakum.github.io </title>
 <link rel="shortcut icon" href="https://merakum.github.io/logo/yenilogo.png" type="image/x-icon" >
 <iframe 
-src="http://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_aksu/playlist.m3u8" 
+src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_aksu/playlist.m3u8" 
 width="100%" 
 height="100%" 
 allowtransparency="true" 
