--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@ height="100%"
 allowtransparency="true" 
 frameborder="0" 
 />
+<a href="https://merakum.github.io/sehiricikameralar/">Sivas/Merkez'deki Şehir içi Kameralar için Tıklayınız!</a>
