--- a/multitv/index.html
+++ b/multitv/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Canlı TV Yayınları</title>
+    <style>
+        /* Sayfa stil kodları burada */
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
 
+        .iframe-container {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            margin: -5px 0 0 -5px; /* İframe'ler arasındaki boşluğu kaldırır */
+        }
+
+        iframe {
+            width: 450px; /* İframe'leri 450x450 boyutuna yakın gösteriyoruz */
+            height: 253px; /* 16:9 oranı yakalamak için bu yüksekliği kullanıyoruz */
+            margin: 5px 0 0 5px; /* İframe'ler arasındaki boşluğu kaldırır */
+        }
+
+        @media (max-width: 768px) {
+            iframe {
+                width: 100%; /* Tablet boyutunda iframe'leri tam genişlikte gösterir */
+                height: 56.25vw; /* 16:9 oranını korumak için bu yüksekliği kullanıyoruz */
+            }
+        }
+
+        .iframe5 {
+            margin-left: 0; /* 5. iframe'i sola taşır */
+        }
+    </style>
+</head>
+<body>
+    <div class="iframe-container">
+        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_merakum/playlist.m3u8" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_meydan/playlist.m3u8" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_medrese/playlist.m3u8" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_aksu/playlist.m3u8" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_tekke/playlist.m3u8" frameborder="0" allowfullscreen class="iframe5"></iframe>
+    </div>
+</body>
+</html>
