--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<title> Hoşgeldiniz! | github.com/merakum/merakum.github.io </title>
-<link rel="shortcut icon" href="https://merakum.github.io/logo/yenilogo.png" type="image/x-icon" >
+<title> Sivas Belediyesi Meraküm Kameraları </title>
+<link rel="shortcut icon" href="https://merakum.heyturkiye.tech/logo/yenilogo.png" type="image/x-icon" >
 <iframe 
-src="https://merakum.github.io/bilgilendirme/" 
+src="https://merakum.heyturkiye.tech/bilgilendirme/" 
 width="100%" 
 height="100%" 
 allowtransparency="true" 
