--- a/multitv/index.html
+++ b/multitv/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canlı TV Yayınları</title>
+    <title> Sivas Belediyesi Meraküm Kameraları | Multi TV </title>
+   <link rel="shortcut icon" href="https://merakum.heyturkiye.tech/logo/yenilogo.png" type="image/x-icon" > 
     <style>
-        /* Sayfa stil kodları burada */
         body {
             margin: 0;
             padding: 0;
@@ -19,24 +19,24 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: flex-start;
-            margin: -5px 0 0 -5px; /* İframe'ler arasındaki boşluğu kaldırır */
+            margin: -5px 0 0 -5px; 
         }
 
         iframe {
-            width: 450px; /* İframe'leri 450x450 boyutuna yakın gösteriyoruz */
-            height: 253px; /* 16:9 oranı yakalamak için bu yüksekliği kullanıyoruz */
-            margin: 5px 0 0 5px; /* İframe'ler arasındaki boşluğu kaldırır */
+            width: 450px; 
+            height: 253px; 
+            margin: 5px 0 0 5px; 
         }
 
         @media (max-width: 768px) {
             iframe {
-                width: 100%; /* Tablet boyutunda iframe'leri tam genişlikte gösterir */
-                height: 56.25vw; /* 16:9 oranını korumak için bu yüksekliği kullanıyoruz */
+                width: 100%; 
+                height: 56.25vw; 
             }
         }
 
         .iframe5 {
-            margin-left: 0; /* 5. iframe'i sola taşır */
+            margin-left: 0; 
         }
     </style>
 </head>
