--- a/tekke/index.html
+++ b/tekke/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="1; URL=http://merakum.heyturkiye.tech/sehiricikameralar/tekke">
+<meta http-equiv="Refresh" content="1; URL=https://merakum.heyturkiye.tech/sehiricikameralar/tekke">
 </head>
 </html>
