--- a/sehiricikameralar/meydan/index.html
+++ b/sehiricikameralar/meydan/index.html
@@ -1,7 +1,7 @@
 <title> Sivas Belediyesi Meraküm Kameraları | Sivas Meydanı Canlı Yayın </title>
 <link rel="shortcut icon" href="https://merakum.heyturkiye.tech/logo/yenilogo.png" type="image/x-icon" >
 <iframe 
-src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_meydan/playlist.m3u8" 
+src="https://sivas.bel.tr/Files/iframesehirkamerasi/liveplayer_meydan.html" 
 width="100%" 
 height="100%" 
 allowtransparency="true" 
