--- a/multitv/index.html
+++ b/multitv/index.html
@@ -42,11 +42,11 @@
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_merakum/playlist.m3u8" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_meydan/playlist.m3u8" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_medrese/playlist.m3u8" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_aksu/playlist.m3u8" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://mn-nl.mncdn.com/sivasbel_tv_live/sivasbel_tekke/playlist.m3u8" frameborder="0" allowfullscreen class="iframe5"></iframe>
+        <iframe src="https://sivas.bel.tr/Files/iframesehirkamerasi/liveplayer_merakum.html" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://sivas.bel.tr/Files/iframesehirkamerasi/liveplayer_meydan.html" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://sivas.bel.tr/Files/iframesehirkamerasi/liveplayer_medrese.html" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://sivas.bel.tr/Files/iframesehirkamerasi/liveplayer_aksu.html" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://sivas.bel.tr/Files/iframesehirkamerasi/liveplayer_tekke.html" frameborder="0" allowfullscreen class="iframe5"></iframe>
     </div>
 </body>
 </html>
